--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.calidos.dani</groupId>
 	<artifactId>provashell</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>rpm</packaging>
 
 	<name>Shell unit testing for the masses</name>
@@ -59,7 +59,7 @@
 
    		<plugins>
 
-			<plugin>	<!-- run test script -->
+			<plugin>	<!-- run test scripts -->
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
 					<version>1.3.2</version>
