--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.calidos.dani</groupId>
 	<artifactId>provashell</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>rpm</packaging>
 
 	<name>Shell unit testing for the masses</name>
@@ -46,12 +46,12 @@
     
     	<resources>
 			<resource>
-	    		<directory>${basedir}/src/main/bash</directory>
+	    		<directory>${basedir}/src/main/sh</directory>
 	    		<targetPath>${project.build.outputDirectory}</targetPath>
 	    		<filtering>true</filtering>
 	    	</resource>
 	    	<resource>
-	    		<directory>${basedir}/src/test/bash</directory>
+	    		<directory>${basedir}/src/test/sh</directory>
 	    		<targetPath>${project.build.directory}</targetPath>
 	    		<filtering>false</filtering>
 	    	</resource>	
