--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.calidos.dani</groupId>
 	<artifactId>provashell</artifactId>
-	<version>2.0.4-SNAPSHOT</version>
+	<version>2.1.1-SNAPSHOT</version>
 	<packaging>rpm</packaging>
 
 	<name>Shell unit testing for the masses</name>
@@ -35,7 +35,7 @@
 		<developer.id_>danigiri</developer.id_>
 	</properties>
     
-   	<scm>
+   	<scm>	<!-- mvn release:prepare release:perform -Darguments='-DaltDeploymentRepository=REPO::default::file:/xxx/.m2/repository' -->
 		<connection>scm:git:git@${scm.host_}:${developer.id_}/${project.artifactId}.git</connection>
 		<url>scm:git:git@${scm.host_}:${developer.id_}/${project.artifactId}.git</url>
 		<developerConnection>scm:git:git@${scm.host_}:${developer.id_}/${project.artifactId}.git</developerConnection>
@@ -145,7 +145,7 @@
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
-			<comments>Copyright (C) 2014 Daniel Giribet</comments>
+			<comments>Copyright (C) 2015 Daniel Giribet</comments>
 		</license>
 	</licenses>
 	
